# fast-detect-gpt.cpp

./: .clang-format  .env.sample  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh  train.sh
include/: detect.h  io.h  threshold.h  utils.h
src/: detect.cpp  io.cpp  main.cpp  threshold.cpp  utils.cpp
